simpleDemo/deployment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: demo2
      spring: boot
      microservice: microservice2
  template:
    metadata:
      labels:
        app: demo2
        spring: boot
        microservice: microservice2
    spec:
      containers:
      - name: spring-demo-actuator
        image: snbsniper29/the-ark:0.0.1
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
        command: [ "sh", "-c"]
        args:
        - while true; do
            echo -en '\n';
            printenv MY_NODE_NAME MY_POD_NAME MY_POD_NAMESPACE;
            printenv MY_POD_IP MY_POD_SERVICE_ACCOUNT;
            sleep 10;
          done;
