simpleDemo/pod.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: demo
spec:
  containers: 
  - image: spring-demo:0.0.1
    name: spring-demo-actuator
    imagePullPolicy: IfNotPresent
