simpleDemo/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo
spec:
  tls:
    - secretName: example-com-tls
      hosts:
        - example.com
  rules:
    - host: example.com
      http:
        paths:
          - backend:
              serviceName: demo
              servicePort: 80
